// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an expenses summary component with total expense for a singular expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render an expenses summary component with total expense for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $7,895,223.61
  </h1>
</div>
`;
